애니메이션 적용 완료

--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="page2">
+    <div id="page2" class="slide-in">
       <h1>Welcome to About</h1>
-      <a href="index.html" class="slide-in">Home</a>
+      <a href="index.html">Home</a>
     </div>
     <script src="index.js"></script>
   </body>
