--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="page1">
+    <div id="page1" class="slide-in">
       <h1>Welcome Home</h1>
-      <a href="about.html" class="slide-in">About</a>
+      <a href="about.html">About</a>
     </div>
     <script src="index.js"></script>
   </body>
